package estructural.bridge.v2;

public interface Device {
  boolean isEnabled();

  void enable();

  void disable();

  int getVolume();

  void setVolume(int percent);

  int getChannel();

  void setChannel(int channel);

  void printStatus();
}
