package estructural.bridge.v2;

public interface Remote {
  void power();

  void volumeDown();

  void volumeUp();

  void channelDown();

  void channelUp();
}
